--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_bloc: ^7.0.0
+  http: ^0.13.4
+
 
 
   # The following adds the Cupertino Icons font to your application.
